upload pending files

--- a/branding/index.yml
+++ b/branding/index.yml
@@ -1,12 +1,12 @@
 ---
 basename: branding
-dirname: /media/michelc/4TB/repos/github.com/DrI-T/design
-title: "index of github.com/DrI-T/design/branding"
-date: 10/19/22
+dirname: /media/michelc/Elements/phenomx/design
+title: "index of /media/michelc/Elements/phenomx/design/branding"
+date: 12/24/22
 dir: .
-tic: 1666168792
-pwd: github.com/DrI-T/design/branding
+tic: 1671883315
+pwd: /media/michelc/Elements/phenomx/design/branding
 ip: 
-qm: QmPimkn6hGmu3G1EujvggAWsj6nob2VEdsLPGB8KaWEgeD
+qm: QmY6HgQkP6v3iCukrLGMUm43yJYSFtcTszGTC5prybdDEL
 GW: https://ipfs.safewatch.tk
 ...
