--- a/logo/index.yml
+++ b/logo/index.yml
@@ -1,12 +1,12 @@
 ---
 basename: logo
-dirname: /media/michelc/4TB/repos/github.com/DrI-T/design
-title: "index of github.com/DrI-T/design/logo"
-date: 10/19/22
+dirname: /media/michelc/Elements/phenomx/design
+title: "index of /media/michelc/Elements/phenomx/design/logo"
+date: 12/24/22
 dir: .
-tic: 1666168792
-pwd: github.com/DrI-T/design/logo
+tic: 1671883322
+pwd: /media/michelc/Elements/phenomx/design/logo
 ip: 
-qm: QmapRmh4j1wRKJGe5KhLyUoAN7PRFMH9JYyTG2sizMBAxB
+qm: QmRcEoAbUby5qvXuuqbKd2Q4RGcqvajcqUHSLHdGmJhh19
 GW: https://ipfs.safewatch.tk
 ...
